Fix horizontal scroll bar

--- a/src/live_calc/web/style.css
+++ b/src/live_calc/web/style.css
@@ -47,9 +47,10 @@ html,body{
 
   background-color: rgb(0,0,0,0);
   
-  top: 0;
-  left: 0;
+  /* top: 0;
+  left: 0; */
   height: 100vh;
+  width: 100vw;
 
   font-size: 1.1rem;
   
@@ -70,7 +71,7 @@ html,body{
   outline: none;
 
   width: 100%;
-  height: 90vh;
+  height: 100vh;
 
   color: rgb(0,0,0,0);
 
@@ -86,12 +87,13 @@ html,body{
 #line-error-container{
   margin: 0px;
   padding: 0px;
+  width: 100%;
 
   margin-top: 0.8rem;
 }
 
 #line-error{
-  width: 100vw;
+  width: 100%;
   height: 24px;
 
   display: inline-block;
@@ -163,7 +165,7 @@ html,body{
   border-top: 1px rgb(50,50,50);
   border-style: solid;
 
-  width: 100%;
+  width: 50%;
   padding: 10px;
   background-color: rgb(0,0,0);
 
@@ -327,7 +329,7 @@ html,body{
 /* width */
 ::-webkit-scrollbar {
   width: 7px;
-  /* height: 7px;    */
+  height: 7px;   
 }
 
 /* Track */
